--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "bootstrap": "^4.3.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
